samples/_failures_safe/1761147228_a997d0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_33bc5a46.c: In function ‘simulate_data_reading’:
./samples/SAFE/__tmp_33bc5a46.c:178:16: error: missing terminating " character
  178 |         printf("Read record: ID=%u, Name=%s,
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_33bc5a46.c:178:9: error: expected expression at end of input
  178 |         printf("Read record: ID=%u, Name=%s,
      |         ^~~~~~
./samples/SAFE/__tmp_33bc5a46.c:178:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_33bc5a46.c:178:9: error: expected declaration or statement at end of input
